// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`IPC wire contracts Settings shape 1`] = `
{
  "appearance": {
    "defaultModelId": "auto",
    "defaultReasoningEffort": null,
    "enableMermaid": false,
    "reasoningVisibility": "compact",
    "streaming": false,
    "theme": "dark",
  },
  "composer": {
    "submitKeybinding": "enter",
  },
  "layout": {
    "dockview": null,
  },
  "notifications": {
    "turnEnd": false,
    "waitingForInput": true,
  },
  "permissions": {
    "defaultApproveAll": false,
  },
  "terminal": {
    "addons": {
      "clipboard": true,
      "image": true,
      "ligatures": true,
      "progress": true,
      "search": true,
      "serialize": true,
      "unicode11": true,
      "unicodeGraphemes": true,
      "webFonts": true,
      "webLinks": true,
      "webgl": true,
    },
    "defaultProfileId": "platform-default",
    "fontFamily": "Cascadia Mono, Consolas, ui-monospace, monospace",
    "fontSize": 13,
    "scrollback": 10000,
    "theme": {
      "background": "#111827",
      "foreground": "#d1d5db",
    },
  },
  "tools": {
    "defaultAllowed": [],
    "defaultExcluded": [],
  },
  "version": 13,
  "workspaces": {
    "defaultWorkspace": "D:\\repo\\dafman",
    "recent": [
      "D:\\repo\\dafman",
      "C:\\code\\demo",
    ],
  },
}
`;

exports[`IPC wire contracts Settings with persisted layout 1`] = `
{
  "appearance": {
    "defaultModelId": "gpt-5.5",
    "defaultReasoningEffort": "medium",
    "enableMermaid": false,
    "reasoningVisibility": "compact",
    "streaming": true,
    "theme": "dark",
  },
  "composer": {
    "submitKeybinding": "mod-enter",
  },
  "layout": {
    "dockview": {
      "activeGroup": "g1",
      "grid": {
        "height": 600,
        "orientation": "HORIZONTAL",
        "root": {},
        "width": 800,
      },
      "panels": {
        "sess-1": {
          "contentComponent": "chat",
          "id": "sess-1",
        },
      },
    },
  },
  "notifications": {
    "turnEnd": true,
    "waitingForInput": true,
  },
  "permissions": {
    "defaultApproveAll": true,
  },
  "terminal": {
    "addons": {
      "clipboard": true,
      "image": true,
      "ligatures": true,
      "progress": true,
      "search": true,
      "serialize": true,
      "unicode11": true,
      "unicodeGraphemes": true,
      "webFonts": true,
      "webLinks": true,
      "webgl": true,
    },
    "defaultProfileId": "pwsh",
    "fontFamily": "Cascadia Mono, Consolas, ui-monospace, monospace",
    "fontSize": 13,
    "scrollback": 10000,
    "theme": {
      "background": "#111827",
      "foreground": "#d1d5db",
    },
  },
  "tools": {
    "defaultAllowed": [],
    "defaultExcluded": [
      "bash",
    ],
  },
  "version": 13,
  "workspaces": {
    "defaultWorkspace": "",
    "recent": [],
  },
}
`;

exports[`IPC wire contracts Settings with v3 groups layout 1`] = `
{
  "appearance": {
    "defaultModelId": "auto",
    "defaultReasoningEffort": null,
    "enableMermaid": false,
    "reasoningVisibility": "compact",
    "streaming": true,
    "theme": "dark",
  },
  "composer": {
    "submitKeybinding": "enter",
  },
  "layout": {
    "groups": [
      {
        "color": "#3b82f6",
        "id": "grp-default",
        "name": "Default",
      },
      {
        "color": "#f59e0b",
        "id": "grp-other",
        "name": "Work",
      },
    ],
    "innerBodies": {
      "grp-default": {
        "activeGroup": "g1",
        "grid": {
          "height": 600,
          "orientation": "HORIZONTAL",
          "root": {},
          "width": 1000,
        },
        "panels": {
          "sess-1": {
            "contentComponent": "chatPanel",
            "id": "sess-1",
          },
        },
      },
      "grp-other": {
        "activeGroup": "g2",
        "grid": {
          "height": 600,
          "orientation": "HORIZONTAL",
          "root": {},
          "width": 1000,
        },
        "panels": {},
      },
    },
    "outer": {
      "activeGroup": "g-outer-1",
      "grid": {
        "height": 800,
        "orientation": "HORIZONTAL",
        "root": {},
        "width": 1200,
      },
      "panels": {
        "grp-default": {
          "contentComponent": "group",
          "id": "grp-default",
        },
        "grp-other": {
          "contentComponent": "group",
          "id": "grp-other",
        },
      },
    },
    "schemaVersion": 3,
  },
  "notifications": {
    "turnEnd": true,
    "waitingForInput": true,
  },
  "permissions": {
    "defaultApproveAll": false,
  },
  "terminal": {
    "addons": {
      "clipboard": true,
      "image": true,
      "ligatures": true,
      "progress": true,
      "search": true,
      "serialize": true,
      "unicode11": true,
      "unicodeGraphemes": true,
      "webFonts": true,
      "webLinks": true,
      "webgl": true,
    },
    "defaultProfileId": "platform-default",
    "fontFamily": "Cascadia Mono, Consolas, ui-monospace, monospace",
    "fontSize": 13,
    "scrollback": 10000,
    "theme": {
      "background": "#111827",
      "foreground": "#d1d5db",
    },
  },
  "tools": {
    "defaultAllowed": [],
    "defaultExcluded": [],
  },
  "version": 13,
  "workspaces": {
    "defaultWorkspace": "",
    "recent": [],
  },
}
`;

exports[`IPC wire contracts ComposerPrefs shape 1`] = `
{
  "enterMode": {
    "submitKeybinding": "enter",
  },
  "modEnterMode": {
    "submitKeybinding": "mod-enter",
  },
}
`;

exports[`IPC wire contracts ModelSummary shape 1`] = `
{
  "defaultReasoningEffort": "medium",
  "id": "claude-sonnet-4.5",
  "name": "Claude Sonnet 4.5",
  "supportedReasoningEfforts": [
    "low",
    "medium",
    "high",
  ],
  "supportsReasoningEffort": true,
}
`;

exports[`IPC wire contracts SessionEventPayload shape 1`] = `
{
  "data": {
    "deltaContent": "hi",
  },
  "eventType": "assistant.message_delta",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts SessionEventPayload with envelope metadata (tool event) 1`] = `
{
  "agentId": "sub-agent-7",
  "data": {
    "result": {
      "content": "ok",
      "detailedContent": 
"ok
"
,
    },
    "success": true,
    "toolCallId": "call-abc",
  },
  "eventId": "00000000-0000-0000-0000-000000000001",
  "eventType": "tool.execution_complete",
  "sessionId": "sess-1",
  "timestamp": "2026-05-17T15:00:00.000Z",
}
`;

exports[`IPC wire contracts SessionMetadataSummary shape 1`] = `
{
  "branch": "main",
  "cwd": "/repo",
  "isRemote": false,
  "modifiedTime": "2026-05-17T11:30:00.000Z",
  "repository": "AsafMah/dafman",
  "sessionId": "s-1",
  "startTime": "2026-05-17T10:00:00.000Z",
  "summary": "refactor auth",
}
`;

exports[`IPC wire contracts AppErrorPayload variants 1`] = `
[
  {
    "kind": "ClientNotStarted",
  },
  {
    "data": "sess-42",
    "kind": "SessionNotFound",
  },
  {
    "data": "disk full",
    "kind": "Settings",
  },
  {
    "data": "rpc closed",
    "kind": "Sdk",
  },
]
`;

exports[`IPC wire contracts SessionMode union 1`] = `
[
  "interactive",
  "plan",
  "autopilot",
]
`;

exports[`IPC wire contracts TaskInfo — agent task 1`] = `
{
  "agentDisplayName": "CI Helper",
  "agentName": "ci-helper",
  "agentType": "explore",
  "canPromoteToBackground": false,
  "description": "Investigate CI",
  "executionMode": "background",
  "id": "agent-1",
  "latestResponse": "Checking logs",
  "model": "gpt-5.5",
  "prompt": "Find the CI failure",
  "startedAt": "2026-05-22T10:00:00.000Z",
  "status": "running",
  "toolCallId": "tool-1",
  "type": "agent",
}
`;

exports[`IPC wire contracts TaskInfo — shell task 1`] = `
{
  "attachmentMode": "detached",
  "canPromoteToBackground": false,
  "command": "bun run check",
  "description": "Run check",
  "executionMode": "background",
  "id": "shell-1",
  "logPath": "C:\\logs\\check.log",
  "pid": 1234,
  "startedAt": "2026-05-22T10:00:00.000Z",
  "status": "idle",
  "type": "shell",
}
`;

exports[`IPC wire contracts JobRecord shape 1`] = `
{
  "activeTimeMs": 1200,
  "agentName": "ci-helper",
  "agentType": "explore",
  "canCancel": true,
  "canOpenSession": true,
  "canPromoteToBackground": false,
  "canRemove": false,
  "description": "Investigate CI",
  "executionMode": "background",
  "id": "sess-1:agent-1",
  "kind": "agent",
  "latestResponse": "Checking logs",
  "model": "gpt-5.5",
  "prompt": "Find the CI failure",
  "sessionId": "sess-1",
  "source": "sdk-task",
  "startedAt": "2026-05-22T10:00:00.000Z",
  "status": "running",
  "title": "CI Helper",
  "toolCallId": "tool-1",
}
`;

exports[`IPC wire contracts TerminalSummary shape 1`] = `
{
  "args": [
    "-NoLogo",
  ],
  "cols": 100,
  "createdAt": "2026-05-23T06:00:00.000Z",
  "cwd": "C:\\repo\\dafman",
  "id": "term-1",
  "rows": 30,
  "sessionId": "sess-1",
  "shell": "pwsh.exe",
  "status": "running",
  "title": "PowerShell",
}
`;

exports[`IPC wire contracts TerminalEventPayload — output 1`] = `
{
  "data": "hello",
  "kind": "output",
  "terminalId": "term-1",
}
`;

exports[`IPC wire contracts CommandResultRecord shape 1`] = `
{
  "command": "bun test",
  "completedAt": "2026-05-23T10:00:01.000Z",
  "createdAt": "2026-05-23T10:00:00.000Z",
  "cwd": "C:\\repo\\dafman",
  "durationMs": 1000,
  "exitCode": 0,
  "id": "cmd-1",
  "sessionId": "sess-1",
  "shell": "pwsh.exe",
  "status": "completed",
  "stderr": "",
  "stdout": "ok",
  "truncated": false,
}
`;

exports[`IPC wire contracts CommandResultEvent — stdout 1`] = `
{
  "commandId": "cmd-1",
  "data": "hello",
  "kind": "stdout",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts SendMessageAttachment — command result 1`] = `
{
  "displayName": "command-result.md",
  "result": {
    "command": "echo hi",
    "createdAt": "2026-05-23T10:00:00.000Z",
    "cwd": "C:\\repo\\dafman",
    "exitCode": 0,
    "id": "cmd-1",
    "sessionId": "sess-1",
    "shell": "pwsh.exe",
    "status": "completed",
    "stderr": "",
    "stdout": "hi",
    "truncated": false,
  },
  "type": "commandResult",
}
`;

exports[`IPC wire contracts sendMessage request — default mode (omitted) 1`] = `
{
  "sessionId": "sess-1",
  "text": "hello",
}
`;

exports[`IPC wire contracts sendMessage request — explicit enqueue mode 1`] = `
{
  "mode": "enqueue",
  "sessionId": "sess-1",
  "text": "queue this",
}
`;

exports[`IPC wire contracts sendMessage request — explicit immediate mode 1`] = `
{
  "mode": "immediate",
  "sessionId": "sess-1",
  "text": "steer this",
}
`;

exports[`IPC wire contracts createSession request — model defaults 1`] = `
{
  "model": "gpt-5.5",
  "reasoningEffort": "medium",
  "workingDirectory": "D:\\repo\\dafman",
}
`;

exports[`IPC wire contracts resumeSession response — cwd and current model 1`] = `
{
  "cwd": "D:\\repo\\dafman",
  "model": "gpt-5.5",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts promoteTask request shape 1`] = `
{
  "id": "agent-1",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts listAgentFiles refresh request shape 1`] = `
{
  "reloadSdk": true,
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts listAgentFiles response shape 1`] = `
[
  {
    "canonical": true,
    "name": "dropped",
    "path": "C:\\repo\\dafman\\.github\\agents\\dropped.agent.md",
    "scope": "project",
  },
]
`;

exports[`IPC wire contracts createTerminal request shape 1`] = `
{
  "args": [
    "-NoLogo",
  ],
  "cols": 80,
  "cwd": "C:\\repo\\dafman",
  "rows": 24,
  "sessionId": "sess-1",
  "shell": "pwsh.exe",
  "title": "Session Shell",
}
`;

exports[`IPC wire contracts listJobs response shape 1`] = `
[
  {
    "canCancel": true,
    "canOpenSession": true,
    "canPromoteToBackground": false,
    "canRemove": false,
    "command": "bun run check",
    "description": "Run check",
    "id": "sess-1:shell-1",
    "kind": "shell",
    "logPath": "C:\\logs\\check.log",
    "pid": 1234,
    "sessionId": "sess-1",
    "source": "sdk-task",
    "startedAt": "2026-05-22T10:00:00.000Z",
    "status": "idle",
    "title": "bun run check",
  },
]
`;

exports[`IPC wire contracts abortSession request shape 1`] = `
{
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts SessionHistoryCompactionResult shape 1`] = `
{
  "messagesRemoved": 5,
  "success": true,
  "tokensFreed": 1234,
}
`;

exports[`IPC wire contracts setSessionWorkingDirectory request shape 1`] = `
{
  "baseWorkingDirectory": "C:\\repo\\dafman",
  "sessionId": "sess-1",
  "workingDirectory": "..\\other",
}
`;

exports[`IPC wire contracts PendingRequestPayload — permission 1`] = `
{
  "kind": "permission",
  "request": {
    "kind": "shell",
    "raw": {
      "command": "rm -rf /tmp/x",
      "cwd": "/home/user",
    },
    "summary": "shell: rm -rf /tmp/x",
    "toolCallId": "tc-abc",
  },
  "requestId": "req-uuid-1",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts PendingRequestPayload — userInput 1`] = `
{
  "kind": "userInput",
  "request": {
    "allowFreeform": true,
    "choices": [
      "Alice",
      "Bob",
    ],
    "question": "What is your name?",
  },
  "requestId": "req-uuid-2",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts PendingRequestPayload — elicitation url 1`] = `
{
  "kind": "elicitation",
  "request": {
    "elicitationSource": "mcp/github",
    "message": "Authenticate to GitHub",
    "mode": "url",
    "url": "https://github.com/login/oauth/authorize",
  },
  "requestId": "req-uuid-3",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts PendingRequestPayload — exit plan mode 1`] = `
{
  "kind": "exitPlanMode",
  "request": {
    "actions": [
      "interactive",
      "autopilot",
      "exit_only",
      "autopilot_fleet",
    ],
    "planContent": "# Plan: Do the thing.",
    "recommendedAction": "interactive",
    "summary": "- Implement the plan",
  },
  "requestId": "req-uuid-4",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts PendingRequestPayload — auto mode switch 1`] = `
{
  "kind": "autoModeSwitch",
  "request": {
    "errorCode": "rate_limit",
    "retryAfterSeconds": 60,
  },
  "requestId": "req-uuid-5",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — permission approve once 1`] = `
{
  "requestId": "req-uuid-1",
  "response": {
    "decision": "approveOnce",
    "kind": "permission",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — permission approve for session (commands rule) 1`] = `
{
  "requestId": "req-uuid-1c",
  "response": {
    "approval": {
      "commandIdentifiers": [
        "git",
      ],
      "kind": "commands",
    },
    "decision": "approveForSession",
    "kind": "permission",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — permission approve for session (mcp tool) 1`] = `
{
  "requestId": "req-uuid-1m",
  "response": {
    "approval": {
      "kind": "mcp",
      "serverName": "github",
      "toolName": "list_issues",
    },
    "decision": "approveForSession",
    "kind": "permission",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — permission approve for session (url domain) 1`] = `
{
  "requestId": "req-uuid-1u",
  "response": {
    "decision": "approveForSession",
    "domain": "github.com",
    "kind": "permission",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — userInput freeform 1`] = `
{
  "requestId": "req-uuid-2",
  "response": {
    "answer": "Alice",
    "kind": "userInput",
    "wasFreeform": false,
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — elicitation accept 1`] = `
{
  "requestId": "req-uuid-3",
  "response": {
    "action": "accept",
    "kind": "elicitation",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — exit plan mode autopilot fleet 1`] = `
{
  "requestId": "req-uuid-4",
  "response": {
    "approved": true,
    "kind": "exitPlanMode",
    "selectedAction": "autopilot_fleet",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts RespondToRequestParams — auto mode switch yes always 1`] = `
{
  "requestId": "req-uuid-5",
  "response": {
    "kind": "autoModeSwitch",
    "response": "yes_always",
  },
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts — diagnostics LogRecord shape (info + warn + error variants) 1`] = `
[
  {
    "level": "info",
    "message": "session resumed",
    "sessionId": "sess-1",
    "ts": "2026-05-21T20:00:00.000Z",
  },
  {
    "level": "warn",
    "message": "ratelimited",
    "retryMs": 1200,
    "ts": "2026-05-21T20:00:01.123Z",
  },
  {
    "error": "spawn ENOENT",
    "level": "error",
    "message": "boot failed",
    "ts": "2026-05-21T20:00:02.456Z",
  },
]
`;

exports[`IPC wire contracts — diagnostics getLogState response shape 1`] = `
{
  "level": "info",
  "recent": [
    {
      "level": "info",
      "message": "ready",
      "ts": "2026-05-21T20:00:00.000Z",
    },
  ],
}
`;

exports[`IPC wire contracts — diagnostics exportDiagnostics result shape 1`] = `
{
  "files": [
    "logs/dafman-2026-05-21.log",
    "logs/recent.json",
    "settings.json",
    "README.md",
  ],
  "path": "C:/Users/mahle/AppData/Local/Dafman/dafman-diagnostics-2026-05-21-2030",
  "totalBytes": 12345,
}
`;

exports[`IPC wire contracts — diagnostics saveExportFile result shape 1`] = `
{
  "bytes": 4242,
  "path": "C:/Users/mahle/AppData/Local/Dafman/exports/refactor-session-2026-05-22-…md",
}
`;

exports[`IPC wire contracts — diagnostics AuditEntry permission + url + mcp shapes 1`] = `
[
  {
    "decision": "approveOnce",
    "kind": "permission",
    "permissionKind": "shell",
    "requestId": "req-1",
    "sessionId": "sess-1",
    "summary": "shell: git status",
    "ts": "2026-05-22T00:00:00.000Z",
  },
  {
    "approvalDomain": "github.com",
    "decision": "approveForSession",
    "kind": "permission",
    "permissionKind": "url",
    "requestId": "req-2",
    "sessionId": "sess-1",
    "ts": "2026-05-22T00:00:01.000Z",
  },
  {
    "allowed": true,
    "kind": "url",
    "reason": "ok",
    "ts": "2026-05-22T00:00:02.000Z",
    "url": "https://github.com/login",
  },
  {
    "argKeyCount": 2,
    "argKeys": [
      "title",
      "body",
    ],
    "kind": "mcp",
    "serverName": "github",
    "sessionId": "sess-1",
    "toolCallId": "tc-1",
    "toolName": "create_issue",
    "ts": "2026-05-22T00:00:03.000Z",
  },
]
`;

exports[`IPC wire contracts — diagnostics WorkspaceFileMatch carries kind 1`] = `
[
  {
    "absolutePath": "/r/README.md",
    "kind": "file",
    "name": "README.md",
    "path": "README.md",
  },
  {
    "absolutePath": "/r/src",
    "kind": "directory",
    "name": "src",
    "path": "src",
  },
  {
    "absolutePath": "/home/u/Documents",
    "kind": "directory",
    "name": "Documents",
    "path": "~/Documents",
  },
]
`;

exports[`IPC wire contracts — diagnostics InstructionSource shape 1`] = `
[
  {
    "content": "# Rules",
    "exists": true,
    "name": "AGENTS.md",
    "path": "C:\\repo\\dafman\\AGENTS.md",
    "relativePath": "AGENTS.md",
    "scope": "project",
    "sizeBytes": 7,
  },
  {
    "content": null,
    "exists": false,
    "name": "Copilot user instructions",
    "path": "C:\\Users\\me\\.copilot\\instructions.md",
    "relativePath": "C:\\Users\\me\\.copilot\\instructions.md",
    "scope": "global",
    "sizeBytes": null,
  },
]
`;

exports[`IPC wire contracts — diagnostics pickAttachment result shape 1`] = `
{
  "cancel": null,
  "dir": {
    "kind": "directory",
    "path": "C:/abs/repo",
  },
  "file": {
    "kind": "file",
    "path": "C:/abs/foo.txt",
  },
}
`;
